SERVER-33639 Protect against distlock acquisition timeout at createDatabase time